<resources>
    <string name="app_name">Meeting Scheduler</string>
    <string name="next_date">NEXT</string>
    <string name="prev_date">PREV</string>
    <string name="schedule_meeting">SCHEDULE A MEETING</string>
    <string name="go_back">BACK</string>
    <string name="meeting_date">Meeting date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="description">Description</string>
    <string name="submit">SUBMIT</string>
    <string name="no_meetings">No meetings... \nEnjoy your day!</string>
    <string name="schedule_company_meeting">Schedule Company Meeting</string>
</resources>
