<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorActivityGray"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AddMeetingActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="64dp"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:src="@drawable/ic_navigate_before_white_32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/back_imageView"
                android:onClick="finishCurrentActivity"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:text="@string/go_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/prev_textview"
                android:onClick="finishCurrentActivity"
                android:layout_marginBottom="6dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/back_imageView"
                app:layout_constraintStart_toEndOf="@+id/back_imageView"/>
            <TextView
                    android:id="@+id/schedule_textView"
                    android:text="@string/schedule_meeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="20sp" app:layout_constraintHorizontal_bias="0.57"
                    app:layout_constraintVertical_bias="0.481"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.Toolbar>
    <!--To get meeting date-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/meeting_date_edittext" android:layout_marginStart="16dp"
        android:hint="@string/meeting_date"
        android:paddingLeft="8dp"
        android:textColor="@android:color/black"
        android:focusable="false"
        android:background="@drawable/scheduler_edittext_background"
        android:drawableRight="@drawable/ic_arrow_drop_down_gray_48dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp" android:layout_marginLeft="16dp" android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

    <!--To get meeting start time-->
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/meeting_start_time_edittext" android:layout_marginStart="16dp"
            android:hint="@string/start_time"
            android:paddingLeft="8dp"
            android:focusable="false"
            android:background="@drawable/scheduler_edittext_background"
            android:drawableRight="@drawable/ic_arrow_drop_down_gray_48dp"
            app:layout_constraintTop_toBottomOf="@+id/meeting_date_edittext" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginRight="16dp"
            android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

    <!--To get meeting end time-->
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/meeting_end_time_edittext" android:layout_marginStart="16dp"
            android:hint="@string/end_time"
            android:paddingLeft="8dp"
            android:focusable="false"
            android:background="@drawable/scheduler_edittext_background"
            android:drawableRight="@drawable/ic_arrow_drop_down_gray_48dp"
            app:layout_constraintTop_toBottomOf="@+id/meeting_start_time_edittext" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginRight="16dp"
            android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

    <!--To add meeting description-->
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="108dp"
            android:gravity="top|left"
            android:inputType="textCapSentences|textMultiLine"
            android:hint="@string/description"
            android:ems="10"
            android:textColor="@android:color/black"
            android:padding="8dp"
            android:id="@+id/description_editText" android:layout_marginTop="32dp"
            android:background="@drawable/description_edit_text"
            android:maxLines="4"
            app:layout_constraintTop_toBottomOf="@+id/meeting_end_time_edittext"
            android:layout_marginLeft="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="@+id/meeting_end_time_edittext"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/next_button_background"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_editText" />
</android.support.constraint.ConstraintLayout>
