<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="64dp"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent">

            <ImageView
                    android:src="@drawable/ic_navigate_before_white_32dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/prev_imageView"
                    android:onClick="fetchPreviousDayMeeting"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="@string/prev_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/prev_textview"
                    android:onClick="fetchPreviousDayMeeting"
                    android:layout_marginBottom="6dp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/prev_imageView"
                    app:layout_constraintStart_toEndOf="@+id/prev_imageView"/>
            <TextView
                    android:id="@+id/date_textView"
                    tools:text="06-08-2019"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="16sp" app:layout_constraintHorizontal_bias="0.447"
                    app:layout_constraintVertical_bias="0.481"/>
            <ImageView
                    android:id="@+id/next_imageView"
                    android:src="@drawable/ic_navigate_next_white_32dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="fetchNextDayMeeting"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:text="@string/next_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="fetchNextDayMeeting"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:id="@+id/textView4" app:layout_constraintEnd_toStartOf="@+id/next_imageView"
                    android:layout_marginBottom="6dp" app:layout_constraintBottom_toBottomOf="@+id/next_imageView"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:layout_constraintEnd_toEndOf="parent">
        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/meeting_recyclerview"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </ScrollView>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="parent"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_mood_yellow_144dp"
            android:id="@+id/no_meeting_imageView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="148dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/no_meetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/no_meetings_textView"
            android:textSize="28sp"
            android:textColor="@color/colorPrimary"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/no_meeting_imageView" android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@color/colorRecyclerGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <Button
            android:text="@string/schedule_company_meeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/schedle_button"
            android:background="@drawable/next_button_background"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
